<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mon vet\'carnet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="description_image_spinner">image spinner</string>
    <string name="nom_du_menu">nom du menu</string>
    <string name="menu_ajouter">Ajouter</string>
    <string name="menu_header">menu header</string>
    <string name="sous_menu_item1">sous menu item1</string>
    <string name="nom_animal">Nom de votre animal</string>
    <string name="age_animal">Age de l\'animal</string>
    <string name="ans">ans</string>
    <string name="ne_le">Né(e) le </string>
    <string name="sexe">Sexe:   </string>
    <string name="race">Race:   </string>
    <string name="robe">Robe:   </string>
    <string name="num_tatouage">N° Tatouage:   </string>
    <string name="num_identification">N° Identification:   </string>
    <string name="proprio1">Proprietaire 1:   </string>
    <string name="proprio2">Proprietaire 2:   </string>
    <string name="eleveur">Eleveur:   </string>
    <string name="signes_distinctifs">Signes distinctifs:   </string>
    <string name="le_carnet_de">Le carnet de santé de</string>
    
    
    <string name="vaccin_corysa">Corysa</string>
    <string name="vaccin_typhus">Typhus</string>
    <string name="vaccin_leucose">Leucose</string>
    <string name="vaccin_chlamydiose">Chlamydiose</string>
    <string name="vaccin_rage">Rage</string>
    <string name="vermifuge">Vermifuge</string>
    <string name="description_date_vaccin">Date au format mmm YYYY</string>
    <string name="vaccin_maladie_de_carre">Maladie de Carré</string>
    <string name="vaccin_parvovirose">Parvovirose</string>
    <string name="vaccin_hepatite_de_rubarth">Hépatite de Rubarth</string>
    <string name="vaccin_Leptospirose">Leptospirose</string>
    <string name="vaccin_toux_du_chenil">Toux du chenil</string>
    <string name="vaccin_piroplasmose">Piroplasmose</string>
    
    <string name="date_vaccin">Date du vaccin</string>
    <string name="date_maladie">Date de la maladie</string>
    
    <string name="poid_libelle_poids">Poid</string>
    
    <string name="description_titre_maladie">Titre de la maladie sur une ligne</string>
    <string name="description_note_maladie">Notes de la maladie, sur plusieurs lignes</string>
    <string name="description_traitement_maladie">Traitements appliqués lors de la consultation, sur plusieur lignes</string>
    <string name="rdv_veto">rdv vétérinaire</string>
    <string name="picto">Pictogramme</string>
    <string name="choix_picto">Choisissez une image</string>
    <string name="description_symptomes_maladie">Symptômes de la maladies, sur plusieur lignes</string>
    
    
    <string name="ok">OK</string>
    <string name="effacer">Effacer</string>
    <string name="modifier">Modifier</string>
    
    <color name="app_color">#FFFFFF</color>
    <color name="text_color">#000000</color>
    <color name="grey">#05511F</color>
	<color name="grey_light">#0551F0</color>
</resources>