<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
 <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"       
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/description_image_spinner" />

   
 	<LinearLayout android:orientation="horizontal"
 	    android:layout_below="@+id/imageView1"
 	    android:id="@+id/layoutNomAnimal"
 	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    <TextView
        android:id="@+id/tvNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:hint="@string/nom_animal"
        android:textIsSelectable="true"/>
 	</LinearLayout>
 	
    
	<LinearLayout android:orientation="horizontal"
	    android:layout_below="@+id/layoutNomAnimal"
	    android:id="@+id/layoutDateNaissance"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	      <TextView
	        android:id="@+id/tvDateNaissance"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"        
	        android:text="@string/ne_le" />	
	    <TextView
	        android:id="@+id/tvDateNaiss"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="true"	        
	         />
	</LinearLayout>
  
    <LinearLayout 
        android:orientation="horizontal"
	    android:layout_below="@+id/layoutDateNaissance"
	    android:id="@+id/layoutSexe"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        >
         <TextView
        android:id="@+id/tvSexe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:text="@string/sexe" />

    <TextView
        android:id="@+id/tvSexeEnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"           
        android:textIsSelectable="true"/>
        
    </LinearLayout>
   
   <LinearLayout 
        android:orientation="horizontal"
	    android:layout_below="@+id/layoutSexe"
	    android:id="@+id/layoutRace"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
       >
        <TextView
        android:id="@+id/tvRace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
        android:text="@string/race" />

    <TextView
        android:id="@+id/tvRaceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"/>
       
   </LinearLayout> 
   <LinearLayout 
        android:orientation="horizontal"
	    android:layout_below="@+id/layoutRace"
	    android:id="@+id/layoutRobe"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
       >
       <TextView
        android:id="@+id/tvRobe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:text="@string/robe" />

    <TextView
        android:id="@+id/tvRobeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textIsSelectable="true"/>
       
   </LinearLayout>
    
     <LinearLayout 
          android:orientation="horizontal"
	    android:layout_below="@+id/layoutRobe"
	    android:id="@+id/layoutNumtatouage"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
         <TextView
	        android:id="@+id/tvNumTatouage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:text="@string/num_tatouage" />

	    <TextView
	        android:id="@+id/tvNumTatouageValue"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:textIsSelectable="true"/>         
         
     </LinearLayout>
    
   <LinearLayout 
         android:orientation="horizontal"
	    android:layout_below="@+id/layoutNumtatouage"
	    android:id="@+id/layoutNumpuce"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
        <TextView
        android:id="@+id/tvNumPuce"
        android:layout_width="wrap_content"       
        android:layout_height="wrap_content"
        android:text="@string/num_identification" />

    <TextView
        android:id="@+id/tvNumPuceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"/>
       
   </LinearLayout> 
    
    <LinearLayout 
        android:orientation="horizontal"
	    android:layout_below="@+id/layoutNumpuce"
	    android:id="@+id/layoutProp1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
        <TextView
	        android:id="@+id/tvProp1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"  
	        android:text="@string/proprio1" />

	    <TextView
	        android:id="@+id/tvProp1Value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="true"/>
        
    </LinearLayout>
   
    <LinearLayout 
        android:orientation="horizontal"
	    android:layout_below="@+id/layoutProp1"
	    android:id="@+id/layoutProp2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
        <TextView
	        android:id="@+id/tvProp2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:text="@string/proprio2" />

	    <TextView
	        android:id="@+id/tvProp2Value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textIsSelectable="true"/>
    </LinearLayout>
     
    
   <LinearLayout 
       android:orientation="horizontal"
	    android:layout_below="@+id/layoutProp2"
	    android:id="@+id/layoutEleveur"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
       <TextView
	        android:id="@+id/tvEleveur"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:text="@string/eleveur" />

	    <TextView
	        android:id="@+id/tvEleveurValue"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:textIsSelectable="true"/>
   </LinearLayout>
   <LinearLayout
       android:orientation="horizontal"
       android:layout_below="@+id/layoutEleveur"
	    android:id="@+id/layoutSigneDistinctif"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    <TextView
	        android:id="@+id/tvSignesDistinctifs"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:text="@string/signes_distinctifs" />
	    <TextView
	        android:id="@+id/tvSignesDistinctifsValue"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:textIsSelectable="true"/>
   </LinearLayout>
    
    

</RelativeLayout>