<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuPlusIdentification"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/content_new"
        android:title="@string/menu_ajouter"/>
    <item
        android:id="@+id/menuPlusVaccin"
        android:orderInCategory="200"
        android:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/content_new"
        android:title="@string/menu_ajouter"/> 
        
    <item
        android:id="@+id/menuPlusMaladie"
        android:orderInCategory="300"
        android:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/content_new"
        android:title="@string/menu_ajouter"/> 
        <item
        android:id="@+id/menuPlusPoids"
        android:orderInCategory="400"
        android:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/content_new"
        android:title="@string/menu_ajouter"/> 
   
   
    <item android:id="@+id/submenu"
          android:title="@string/menu_header"
          android:showAsAction="never" > 
        <menu>
            <item android:id="@+id/submenu_item1"
                  android:title="@string/sous_menu_item1" />
        </menu>
    </item>

</menu> 