<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <DatePicker android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:spinnersShown="true"
        android:calendarViewShown="false"
        android:minDate="01/01/1970"
        android:id="@+id/datePickerPoidsSaisie"
        />
    
    <LinearLayout
        android:id="@+id/layoutPoid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp" >
        <LinearLayout android:orientation="horizontal" 
             		  android:layout_width="wrap_content"
        			  android:layout_height="wrap_content">

         				<TextView
         				    android:layout_width="wrap_content"
         				    android:layout_height="wrap_content"
         				    android:text="@string/poid_libelle_poids" />

         				<EditText
         				    android:id="@+id/editTextSaisieKilo"
         				    android:layout_width="wrap_content"
         				    android:layout_height="wrap_content"
         				    android:hint="10" />
						

         				<TextView
         				    android:layout_width="wrap_content"
         				    android:layout_height="wrap_content"
         				    android:text="," />

			         	<EditText
			         	    android:id="@+id/editTextSaisieGramme"
			         	    android:layout_width="wrap_content"
			         	    android:layout_height="wrap_content" 
			         	    android:hint="05"/>"

			         	<TextView
			         	    android:layout_width="wrap_content"
			         	    android:layout_height="wrap_content"
			         	    android:text="Kilos" />
     
        </LinearLayout>
        
        <TextView android:layout_width="wrap_content"
			         	    android:layout_height="wrap_content"
            android:text="Notes"></TextView>
        
        <TextView
            android:id="@+id/textViewNotePoids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
             android:ems="10"
            
            android:hint="@string/description_note_maladie" />
       
        
    </LinearLayout>
    
    
       
    

   
    
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"  >

        <Button
            android:id="@+id/btOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/ok"            />

        <Button
            android:id="@+id/btEffacer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:layout_gravity="left|top"
            android:layout_marginLeft="40dp"
            style="?android:attr/buttonBarButtonStyle"            
            android:text="@string/effacer"/>
        
    </LinearLayout>
    
    
    

</LinearLayout>